...
                android:textColor="@android:color/white"
                android:padding="16dp"
                android:text="@string/activity_main_code"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

            <TextView
                android:id="@+id/list_item_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_toRightOf="@+id/list_item_code"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
...
